--- a/force-app/main/default/aura/accountSearchEngineComponent/accountSearchEngineComponent.css
+++ b/force-app/main/default/aura/accountSearchEngineComponent/accountSearchEngineComponent.css
@@ -1,5 +1,4 @@
-table.THIS {
-    width: 50%;
-    border: 1px solid black;
-    background-color:  #ccc;
+.THIS .slds-table {
+    background-color: #eee;
+    
 }
